Refactor EnumTypeObjectArchetype.Pair
'Pair' is an overloaded name, let's use EnumTypeValue to be more
explicit as to what this is.

Also clean up method names involved with these objects, dropping quite a
few 'get' prefixes.

JIRA: YANGTOOLS-1793
Change-Id: I37f704bad6841a9872d4e5832ec858581261325e
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>